--- a/styles.css
+++ b/styles.css
@@ -208,13 +208,14 @@ body {
     margin-top: 2rem;
 }
 
+/*
 .attribute {
     background-color: black;
     font-size: 5px;
     text-decoration: none;
     color: black;
     opacity: .5;
-}
+}*/
 
 .attribute a {
     font-size: 5px;
